--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ init:
   - ps: |
       mkdir C:\downloads | Out-Null
       cd C:\downloads
+      [Net.ServicePointManager]::SecurityProtocol = 'Ssl3, Tls, Tls11, Tls12'
       Start-FileDownload "https://releases.hashicorp.com/vagrant/1.8.1/vagrant_1.8.1.msi"
       Start-Process -FilePath "msiexec.exe" -ArgumentList "/a vagrant_1.8.1.msi /qb TARGETDIR=C:\Vagrant" -Wait
       Start-FileDownload "http://download.virtualbox.org/virtualbox/5.0.14/VirtualBox-5.0.14-105127-Win.exe"
