--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 sudo: required
 
+language: bash
+script:
+  - make deb
+  - echo "ALL check"
+  - ls *
+  - echo "bundles check"
+  - ls bundles/
 
 services:
   - docker
@@ -9,19 +16,10 @@ before_install:
   - sudo apt-get install -y git-all build-essential 
 
 
-jobs:
-  include:
-    - stage: make build
-      language: bash
-      script: make build
-    - stage: make deb
-      language: bash
-      script: make deb
-    - stage: deploy release
-      deploy:
-        provider: releases
-        file_glob: true
-        api_key: $GITHUB_OAUTH_TOKEN
-        file: bundles/*
-        skip_cleanup: true
-        draft: true
+deploy:
+  provider: releases
+  file_glob: true
+  api_key: $GITHUB_OAUTH_TOKEN
+  file: bundles/*
+  skip_cleanup: true
+  draft: true
